# med-ai-runner

./: .gitignore  Dockerfile  Pipfile  README.md  build.sh  docker-compose.yml  environment.yml  generate_db_file.sh  index.html  objects.inv  orthanc.json  orthanc.public.json  push-docker.sh  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy.yml
app/: celerybeat-schedule  celerybeat-schedule.db  db_queries.py  db_utils.py  logger.py  messaging.py  results_processor.py  runner.py  settings.py  tasks.py  utils.py
app/db/: classifier_db.py  connection_manager.py  eval_db.py  experiment_db.py  model_db.py  models.py  settings_db.py  study_db.py
app/services/: classifier_service.py  eval_service.py  experiment_service.py  logger_service.py  messaging_service.py  model_service.py  orthanc_service.py  settings_service.py  study_service.py
app/utils/: db_utils.py  utils.py
dockerfiles/: Dockerfile  beat.Dockerfile  orthanc.Dockerfile  orthanc.public.Dockerfile  results.Dockerfile  worker.Dockerfile  worker.gpu.Dockerfile  worker.nogpu.Dockerfile
docs/: conf.py  index.rst
example/: Dockerfile  evaluate.py  main.py  preprocess.py
