[tool.poetry]
name = "med-ai-runner"
version = "0.1.0"
description = "A framework for running your deep learning models in practice"
authors = ["Travis Clarke", "Jacob Clarke <jacobclarke718@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.2.2"
future = "^0.18.2"
pydicom = {git = "https://github.com/pydicom/pydicom.git"}
redis = "^3.5.3"
numpy = "^1.19.1"
psycopg2 = "^2.8.5"
celery = {extras = ["redis"], version = "^4.4.7"}
pillow = "^7.2.0"
medaimodels = "^0.1.0"
python-logstash = "^0.4.6"

[tool.poetry.dev-dependencies]
sphinx = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
